--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,2 +1,4 @@
-spring.profiles.active=test
-spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/meu_banco
+spring.datasource.username=root
+spring.datasource.password=root
