--- a/web/package.json
+++ b/web/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@brainhubeu/react-carousel": "2.0.1",
+    "@lottiefiles/lottie-player": "^1.0.0",
     "@reach/router": "^1.3.4",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -15,6 +16,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.2.0",
+    "react-lottie": "^1.2.3",
     "react-multi-carousel": "^2.6.2",
     "react-qr-code": "^1.1.1",
     "react-scripts": "4.0.3",
