--- a/web/package.json
+++ b/web/package.json
@@ -21,7 +21,8 @@
     "react-qr-code": "^1.1.1",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yup": "^0.32.9"
   },
   "scripts": {
     "start": "react-scripts start",
