--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.profiles.active=heroku
 spring.jpa.open-in-view=false
 jwt.secret=hackatontime8secret
+
+my.token-header=Authorization
+my.auth-token=afe0f5c413464d07d92d4601b348525d
