--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,6 +1,14 @@
-spring.profiles.active=heroku
-spring.jpa.open-in-view=false
-jwt.secret=hackatontime8secret
+#Postgres
+spring.jpa.database=POSTGRESQL
+spring.datasource.platform=postgres
+spring.jpa.show-sql=true
+spring.datasource.initialization-mode=always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.database.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/doano
+spring.datasource.username=seu_usuario
+spring.datasource.password=sua_senha
 
+#Autenticação
 my.token-header=Authorization
 my.auth-token=afe0f5c413464d07d92d4601b348525d
